summary: to the end --> applicant details

--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -24,19 +24,19 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="farmer" {{ checked("applicant", "farmer") }}>
+                <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
                   Farmer (the grant is for my business)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="farm-manager" {{ checked("applicant", "farm-manager") }}>
+                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Farm manager" {{ checked("applicant", "farm-manager") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-2">
                   Farm manager (the grant is for a business I work for)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-3" name="applicant" type="radio" value="agent" {{ checked("applicant", "agent") }}>
+                <input class="govuk-radios__input" id="applicant-3" name="applicant" type="radio" value="Agent" {{ checked("applicant", "agent") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-3">
                   Agent
                 </label>
