--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -447,147 +447,149 @@
       </div>
     </dl>
 
-    {% if data['new-business'] == "no" %}
-    <div class="govuk-inset-text">
-        You will need to provide additional financial evidence when you make a full application.
-    </div>
-    {% endif %}
-
-    {% if (data['applying'] == "own") or (data['preferred-contact'] == "contact me and the applicant") %}
-
-    <h2 class="govuk-heading-m govuk-!-margin-top-9">Your details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-9">Application details</h2>
 
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Full name
+          Who is applying?
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['full-name'] }}
+          {{ data['applicant'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="your-details">
-            Change<span class="govuk-visually-hidden"> full name</span>
+          <a class="govuk-link" href="applying">
+            Change<span class="govuk-visually-hidden"> applicant</span>
+          </a>
+        </dd>
+      </div>
+      {% if data['applicant'] == "Farmer" %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+            Farmer name
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['farmer-full-name'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="farmer-details">
+              Change<span class="govuk-visually-hidden"> farmer name</span>
+            </a>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+            Farmer email
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['farmer-email'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="farmer-details">
+              Change<span class="govuk-visually-hidden"> farmer email</span>
+            </a>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+            Farmer phone
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['farmer-phone'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="farmer-details">
+              Change<span class="govuk-visually-hidden"> farmer phone</span>
+            </a>
+          </dd>
+        </div>
+      {% else %}
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          Farmer name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['farmer-full-name'] }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="other-applicant-details">
+            Change<span class="govuk-visually-hidden"> farmer name</span>
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Email
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          Farmer email
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['email'] }}
+          {{ data['farmer-email'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="your-details">
-            Change<span class="govuk-visually-hidden"> email</span>
+          <a class="govuk-link" href="other-applicant-details">
+            Change<span class="govuk-visually-hidden"> farmer email</span>
           </a>
         </dd>
       </div>
-      {% for item in data['contact-preferences'] %}
-      {% if item == "phone" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Phone
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          Farmer phone
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['telephone-number'] }}
+          {{ data['farmer-phone'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="your-details">
-            Change<span class="govuk-visually-hidden"> telephone number</span>
+          <a class="govuk-link" href="other-applicant-details">
+            Change<span class="govuk-visually-hidden"> farmer phone</span>
           </a>
         </dd>
       </div>
-      {% endif %}
-      {% endfor %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Contact preferences
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <ul class="govuk-list govuk-list--bullet">
-            {% for item in data['contact-preferences'] %}
-            <li>{{ item  | capitalize }}</li>
-            {% endfor %}
-          </ul>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="your-details">
-            Change<span class="govuk-visually-hidden"> contact preferences</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-    </dl>
 
-    {% if (data['applying'] == "other") %}
-
-    <h2 class="govuk-heading-m govuk-!-margin-top-9">Applicant details</h2>
-
-    <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Applicant name
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          {{ data['applicant'] }} name
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['applicant-name'] }}
+          {{ data['farmer-full-name'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="applicant-details">
+          <a class="govuk-link" href="other-applicant-details">
             Change<span class="govuk-visually-hidden"> applicant name</span>
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Applicant email
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          {{ data['applicant'] }} email
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['applicant-email'] }}
+          {{ data['farmer-email'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="applicant-details">
+          <a class="govuk-link" href="other-applicant-details">
             Change<span class="govuk-visually-hidden"> applicant email</span>
           </a>
         </dd>
       </div>
-      {% for item in data['applicant-contact-preferences'] %}
-      {% if item == "phone" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Applicant phone
+        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
+          {{ data['applicant'] }} phone
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['applicant-telephone-number'] }}
+          {{ data['farmer-phone'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="applicant-details">
-            Change<span class="govuk-visually-hidden"> applicant telephone number</span>
+          <a class="govuk-link" href="other-applicant-details">
+            Change<span class="govuk-visually-hidden"> applicant phone</span>
           </a>
         </dd>
       </div>
       {% endif %}
-      {% endfor %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Applicant contact preferences
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <ul class="govuk-list govuk-list--bullet">
-            {% for item in data['applicant-contact-preferences'] %}
-            <li>{{ item  | capitalize }}</li>
-            {% endfor %}
-          </ul>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="applicant-details">
-            Change<span class="govuk-visually-hidden"> applicant contact preferences</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
+
     </dl>
+
+
+
+
 
   </div>
 </div>
