show applicant details in summary

--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -523,7 +523,8 @@
             </a>
           </dd>
         </div>
-      {% else %}
+      {% endif %}
+      {% if (data['applicant'] == "Farm manager") or (data['applicant'] == "Agent") %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
           Farmer name
