restore saved values when editing /environment

--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -25,25 +25,25 @@
             
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-1" name="environment" type="checkbox" value="Stop or reduce summer abstraction" {{ checked("environment", "stop-reduce-summer-abstraction") }}>
+                <input class="govuk-checkboxes__input" id="environment-1" name="environment" type="checkbox" value="Stop or reduce summer abstraction" {{ checked("environment", "Stop or reduce summer abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-1">
                   Stop or reduce summer abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-2" name="environment" type="checkbox" value="More efficient use of water" {{ checked("environment", "more-efficient-water-use") }}>
+                <input class="govuk-checkboxes__input" id="environment-2" name="environment" type="checkbox" value="More efficient use of water" {{ checked("environment", "More efficient use of water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-2">
                    More efficient use of water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-3" name="environment" type="checkbox" value="Reduce soil erosion" {{ checked("environment", "reduce-soil-erosion") }}>
+                <input class="govuk-checkboxes__input" id="environment-3" name="environment" type="checkbox" value="Reduce soil erosion" {{ checked("environment", "Reduce soil erosion") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-3">
                   Reduce soil erosion
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-4" name="environment" type="checkbox" value="Reservoir design" {{ checked("environment", "reservoir-design") }}>
+                <input class="govuk-checkboxes__input" id="environment-4" name="environment" type="checkbox" value="Reservoir design" {{ checked("environment", "Reservoir design") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-4">
                   Design of the reservoir
                 </label>
@@ -55,14 +55,14 @@
                   -->
                 <div class="govuk-checkboxes" style="margin: 20px">
                   <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="environment-reservoir-options-1" name="environment-reservoir-options" type="checkbox" value="Create a wetland area" {{ checked("environment-reservoir-options", "wetland-area") }}>
+                    <input class="govuk-checkboxes__input" id="environment-reservoir-options-1" name="environment-reservoir-options" type="checkbox" value="Create a wetland area" {{ checked("environment-reservoir-options", "Create a wetland area") }}>
                     <label class="govuk-label govuk-checkboxes__label" for="environment-reservoir-options-1">
                       Create a wetland area
                     </label>
                   </div>
 
                   <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="environment-reservoir-options-2" name="environment-reservoir-options" type="checkbox" value="Planting" {{ checked("environment-reservoir-options", "planting") }}>
+                    <input class="govuk-checkboxes__input" id="environment-reservoir-options-2" name="environment-reservoir-options" type="checkbox" value="Planting" {{ checked("environment-reservoir-options", "Planting") }}>
                     <label class="govuk-label govuk-checkboxes__label" for="environment-reservoir-options-2">
                       Planting
                     </label>
@@ -71,13 +71,13 @@
                 </div>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-6" name="environment" type="checkbox" value="Reduce energy use" {{ checked("environment", "reduce-energy-use") }}>
+                <input class="govuk-checkboxes__input" id="environment-6" name="environment" type="checkbox" value="Reduce energy use" {{ checked("environment", "Reduce energy use") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-6">
                   Reduce energy use
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-7" name="environment" type="checkbox" value="No improvement" {{ checked("environment", "no-improvement") }}>
+                <input class="govuk-checkboxes__input" id="environment-7" name="environment" type="checkbox" value="No improvement" {{ checked("environment", "No improvement") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-7">
                   It does not improve the environment
                 </label>
