restore saved values when editing

--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -24,25 +24,25 @@
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-1" name="irrigation" type="checkbox" value="peak flow" {{ checked("irrigation", "peak-flow") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-1" name="irrigation" type="checkbox" value="Peak flow" {{ checked("irrigation", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-1">
                   Peak-flow surface water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-2" name="irrigation" type="checkbox" value="bore hole" {{ checked("irrigation", "bore-hole") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-2" name="irrigation" type="checkbox" value="Bore hole" {{ checked("irrigation", "Bore hole") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-3" name="irrigation" type="checkbox" value="surface abstraction" {{ checked("irrigation", "surface-abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-3" name="irrigation" type="checkbox" value="Surface abstraction" {{ checked("irrigation", "Surface abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-3">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-4" name="irrigation" type="checkbox" value="rain water" {{ checked("irrigation", "rain-water") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-4" name="irrigation" type="checkbox" value="Rain water" {{ checked("irrigation", "Rain water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-4">
                   Rain water harvesting
                 </label>
