--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -24,31 +24,31 @@
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-1" name="irrigation-systems" type="checkbox" value="trickle" {{ checked("irrigation-systems", "trickle") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-1" name="irrigation-systems" type="checkbox" value="Trickle" {{ checked("irrigation-systems", "Trickle") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-1">
                   Trickle
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-2" name="irrigation-systems" type="checkbox" value="boom irrigator" {{ checked("irrigation-systems", "boon-irrigator") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-2" name="irrigation-systems" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems", "Boom irrigator") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-2">
                   Boom irrigator
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-3" name="irrigation-systems" type="checkbox" value="ebb and flood" {{ checked("irrigation-systems", "ebb-flood") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-3" name="irrigation-systems" type="checkbox" value="Ebb and flood" {{ checked("irrigation-systems", "Ebb and flood") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-3">
                   Ebb and flood
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-4" name="irrigation-systems" type="checkbox" value="sprinklers" {{ checked("irrigation-systems", "sprinklers") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-4" name="irrigation-systems" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems", "Sprinklers") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-4">
                   Sprinklers
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-5" name="irrigation-systems" type="checkbox" value="rain gun" {{ checked("irrigation-systems", "rain-gun") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-5" name="irrigation-systems" type="checkbox" value="Rain gun" {{ checked("irrigation-systems", "Rain gun") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-5">
                   Rain gun
                 </label>
