--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -27,31 +27,31 @@
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-1" name="productivity" type="checkbox" value="Increase yield" {{ checked("productivity", "increase-yield") }}>
+                <input class="govuk-checkboxes__input" id="productivity-1" name="productivity" type="checkbox" value="Increase yield" {{ checked("productivity", "Increase yield") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-1">
                   Increase yield
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-2" name="productivity" type="checkbox" value="Improve quality" {{ checked("productivity", "improve-quality") }}>
+                <input class="govuk-checkboxes__input" id="productivity-2" name="productivity" type="checkbox" value="Improve quality" {{ checked("productivity", "Improve quality") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-2">
                   Improve quality
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-3" name="productivity" type="checkbox" value="Introduce high-value crops" {{ checked("productivity", "high-value-crops") }}>
+                <input class="govuk-checkboxes__input" id="productivity-3" name="productivity" type="checkbox" value="Introduce high-value crops" {{ checked("productivity", "Introduce high-value crops") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-3">
                   Introduce high-value crops
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-4" name="productivity" type="checkbox" value="Introduce protected crops" {{ checked("productivity", "protected-crops") }}>
+                <input class="govuk-checkboxes__input" id="productivity-4" name="productivity" type="checkbox" value="Introduce protected crops" {{ checked("productivity", "Introduce protected crops") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-4">
                   Introduce protected crops
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-5" name="productivity" type="checkbox" value="No improvement" {{ checked("productivity", "no-improvement") }}>
+                <input class="govuk-checkboxes__input" id="productivity-5" name="productivity" type="checkbox" value="No improvement" {{ checked("productivity", "No improvement") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-5">
                   It does not improve productivity
                 </label>
