--- a/app/views/current/views/water/project-summary.html
+++ b/app/views/current/views/water/project-summary.html
@@ -21,19 +21,19 @@
             <p>The project will:</p>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary" name="project-summary" type="radio" value="introduce irrigation" {{ checked("project-summary", "introduce-irrigation") }}>
+                <input class="govuk-radios__input" id="project-summary" name="project-summary" type="radio" value="introduce irrigation" {{ checked("project-summary", "introduce irrigation") }}>
                 <label class="govuk-label govuk-radios__label" for="project-summary">
                   Introduce irrigation
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary-2" name="project-summary" type="radio" value="increase irrigation" {{ checked("project-summary", "increase-irrigation") }}>
+                <input class="govuk-radios__input" id="project-summary-2" name="project-summary" type="radio" value="increase irrigation" {{ checked("project-summary", "increase irrigation") }}>
                 <label class="govuk-label govuk-radios__label" for="project-summary-2">
                   Increase irrigation
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary-3" name="project-summary" type="radio" value="improve irrigation efficiency" {{ checked("project-summary", "improve-irrigation-efficiency") }}>
+                <input class="govuk-radios__input" id="project-summary-3" name="project-summary" type="radio" value="improve irrigation efficiency" {{ checked("project-summary", "improve irrigation efficiency") }}>
                 <label class="govuk-label govuk-radios__label" for="project-summary-2">
                   Improve irrigation efficiency
                 </label>
