--- a/app/views/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/current/views/layouts/GUIDANCEWATER.html
@@ -50,11 +50,11 @@ Large grants for water resource management projects - GOV.UK
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Grants for water resource management projects
+        Farming Transformation Fund water resource management grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">This Farming Transformation Fund grant is to make more efficient use of water for irrigation and secure water supplies for crops.</p>
+    <p class="gem-c-lead-paragraph">This grant is to make more efficient use of water for irrigation and secure water supplies for crops.</p>
 
   </div>
 </div>
@@ -65,7 +65,7 @@ Large grants for water resource management projects - GOV.UK
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
           Published 31 July 2017
-          <br>Last updated 9 July 2019
+          <br>Last updated 12 January 2021
           — <a href="#history">see all updates</a>
         </div>
 
