--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -33,11 +33,12 @@
     <p>Use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>check if you can apply for a grant for your project (takes about 10 minutes)</li>
-      <li>check how well your project fits Defra’s funding priorities and provides value for taxpayers' money (takes about 30 minutes if you have all the project details)</li>
+      <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
+      <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
     </ul>
 
-    <p>You will not automatically get a grant. You are competing against other projects.</p>
+    <p>Depending on how well your project scores, you may want to submit your details to RPA to get the full application.</p>
+    <p>You will not automatically get a grant. The grant is highly competitive and you are competing against other projects.</p>
 
     <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
       Start now
@@ -50,9 +51,11 @@
 
     <p>You need:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>to think about what items you may want to buy for the project</li>
-      <li>an estimate of the total cost of the items that could get a grant</li>
-      <li>to either have or be confident you will have any planning permission and abstraction licences in place before XX October 2021</li>
+      <li>information about your business (number of employees, turnover etc)</li>
+      <li>information about the project (irrigated land in hectares etc)</li>
+      <li>to know what items you'd like to buy for the project</li>
+      <li>an estimate of the total cost of the items</li>
+      <li>to either have or be confident you will have any planning permission and abstraction licences before 21 October 2021</li>
     </ul>
 
   </div>
