--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="../water/collaboration">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     <div class="govuk-panel govuk-panel--confirmation">
-      <h1 class="govuk-panel__title">MEDIUM FIT</h1>
+      <h1 class="govuk-panel__title">CONSENT</h1>
     </div>
 
     <p>
@@ -697,7 +697,7 @@
       </form>
     -->
 
-    <form class="form" action="../water/business" method="post">
+    <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Continue
       </button>
