--- a/app/views/current/views/water/farmer-details.html
+++ b/app/views/current/views/water/farmer-details.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../water/final-page" method="post">
+      <form class="form" action="../water/consent" method="post">
 
         <h1 class="govuk-heading-l"> Farmer details </h1>
 
