--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="../water/collaboration">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     <div class="govuk-panel govuk-panel--confirmation">
-      <h1 class="govuk-panel__title">MEDIUM FIT</h1>
+      <h1 class="govuk-panel__title">REFERENCE NUMBER</h1>
     </div>
 
     <p>
@@ -696,13 +696,6 @@
 
       </form>
     -->
-
-    <form class="form" action="../water/business" method="post">
-      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-        Continue
-      </button>
-    </form>
-
 
   </div>
 </div>
