additional changes [guidance 2]

--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -48,11 +48,11 @@
   <li>to either have or be confident you will have any planning permission and abstraction licences before 21 October 2021</li>
 </ul>
 
-<p>After you have gone through the checking service/checker, you’ll get a score showing how well your project fits the funding priorities.</p>
+<p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
 <p>Depending on how well your project scores, you may want to submit your details to RPA to get the full application.</p>
 
 <h3>Submit a full application</h3>
-<p>Once you submit a full application, RPA will assess how well it is.</p>
+<p>Once you submit a full application, RPA will assess it.</p>
 <p>You will not automatically get a grant. The grant is highly competitive and you are competing against other projects.</p>
 <p>If your full application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 
@@ -69,7 +69,7 @@
   <li>get quotes from suppliers</li>
   <li>apply for planning permission or an abstraction licence</li>
 </ul>
-
+<br/>
 <p>
 <a href="../water/start">Check if you can apply and how well your project fits the funding priorities.</a>
 </p>
