edit /consent button

--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -32,7 +32,7 @@
 
     <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-        Continue
+        Submit
       </button>
     </form>
 
