change name to 'Farm worker'

--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -30,7 +30,7 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Farm manager" {{ checked("applicant", "Farm manager") }}>
+                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Farm worker" {{ checked("applicant", "Farm worker") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-2">
                   Farm manager (the grant is for a business I work for)
                 </label>
