--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="../water/collaboration">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -495,7 +495,7 @@
       </form>
     -->
 
-    <form class="form" action="../water/business" method="post">
+    <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Continue
       </button>
