--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -15,7 +15,7 @@
 
     <p>
       As you’re eligible to apply, here is the 
-      <a href="check-answers-all.html">full application form.</a>
+      <a href="answers.html">full application form.</a>
     </p>
     <p>The grant is highly competitive and you are competing against other projects.</p>
     <p>You answered:</p>
