revert to 'Farm manager'

--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -15,7 +15,7 @@
 
       <form class="form" action="../water/consent" method="post">
     
-        {% if (data['applicant'] == "Agent") or (data['applicant'] == "Farm worker") %}
+        {% if (data['applicant'] == "Agent") or (data['applicant'] == "Farm manager") %}
 
 	      <h1 class="govuk-heading-l"> {{ data['applicant'] }} details </h1>
 
