--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -22,7 +22,7 @@
 
     <h3 class="govuk-heading-m">What happens next</h3>
 
-    <p>We will email you with a link to the full application form.</p>
+    <p>Depending on how well your project fits the funding priorities, you may decide to submit a full application.</p>
 
     <p>If you submit a full application, we will:</p>
     
@@ -49,7 +49,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <h1 class="govuk-heading-l">Check and submit your details to get your score</h1>
+    <h1 class="govuk-heading-l">Check and submit your details to get the full application form</h1>
+    <p>If you’re happy with your answers, you can submit them to the RPA to be emailed a link to the full application form.</p>
 
     <h2 class="govuk-heading-m">Eligibility</h2>
 
