--- a/app/views/current/views/water/project-summary.html
+++ b/app/views/current/views/water/project-summary.html
@@ -19,22 +19,22 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <p>The project will:</p>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary" name="project-summary" type="radio" value="introduce irrigation" {{ checked("project-summary", "introduce irrigation") }}>
-                <label class="govuk-label govuk-radios__label" for="project-summary">
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-summary-1" name="project-summary" type="checkbox" value="introduce irrigation" {{ checked("project-summary", "introduce irrigation") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-summary-1">
                   Introduce irrigation
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary-2" name="project-summary" type="radio" value="increase irrigation" {{ checked("project-summary", "increase irrigation") }}>
-                <label class="govuk-label govuk-radios__label" for="project-summary-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-summary-2" name="project-summary" type="checkbox" value="increase irrigation" {{ checked("project-summary", "increase irrigation") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-summary-2">
                   Increase irrigation
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-summary-3" name="project-summary" type="radio" value="improve irrigation efficiency" {{ checked("project-summary", "improve irrigation efficiency") }}>
-                <label class="govuk-label govuk-radios__label" for="project-summary-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="project-summary-3" name="project-summary" type="checkbox" value="improve irrigation efficiency" {{ checked("project-summary", "improve irrigation efficiency") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="project-summary-3">
                   Improve irrigation efficiency
                 </label>
               </div>
