--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -226,10 +226,18 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key govuk-!-width-one-third">
-              Irrigated land (hectares)
+              Current irrigated land (hectares)
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ data['irrigated-land'] }}
+              {{ data['irrigated-land-current'] }}
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key govuk-!-width-one-third">
+              Projected irrigated land (hectares)
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['irrigated-land-target'] }}
             </dd>
           </div>
           <div class="govuk-summary-list__row">
