complete /environment --> add extra option

--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -71,6 +71,12 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-6" name="environment" type="checkbox" value="Improve environmental landscaping" {{ checked("environment", "Improve environmental landscaping") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-6">
+                  Improve environmental landscaping
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="environment-7" name="environment" type="checkbox" value="No improvement" {{ checked("environment", "No improvement") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-7">
                   It does not improve the environment
