--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
       <form class="form" action="../water/irrigation-water-source-answer" method="post">
 
@@ -19,37 +19,79 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Where will the water used for irrigation come from?
+                Where does your current irrigation water come from?
               </h1>
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-1" name="irrigation" type="checkbox" value="Peak flow" {{ checked("irrigation", "Peak flow") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-1">
+                <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak flow" {{ checked("irrigation-current", "Peak flow") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-1">
                   Peak-flow surface water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-2" name="irrigation" type="checkbox" value="Bore hole" {{ checked("irrigation", "Bore hole") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-2">
+                <input class="govuk-checkboxes__input" id="irrigation-current-2" name="irrigation-current" type="checkbox" value="Bore hole" {{ checked("irrigation-current", "Bore hole") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-3" name="irrigation" type="checkbox" value="Surface abstraction" {{ checked("irrigation", "Surface abstraction") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-3">
+                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Surface abstraction" {{ checked("irrigation-current", "Surface abstraction") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-3">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-4" name="irrigation" type="checkbox" value="Rain water" {{ checked("irrigation", "Rain water") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-4">
+                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Rain water" {{ checked("irrigation-current", "Rain water") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-4">
                   Rain water harvesting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-5" name="irrigation" type="checkbox" value="mains" {{ checked("irrigation", "mains") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-5">
+                <input class="govuk-checkboxes__input" id="irrigation-current-5" name="irrigation-current" type="checkbox" value="mains" {{ checked("irrigation-current", "mains") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-5">
+                  Mains
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                Where will the irrigation water come from?
+              </h1>
+            </legend>
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak flow" {{ checked("irrigation-target", "Peak flow") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
+                  Peak-flow surface water
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-target-2" name="irrigation-target" type="checkbox" value="Bore hole" {{ checked("irrigation-target", "Bore hole") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-2">
+                  Bore hole/aquifer
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-target-3" name="irrigation-target" type="checkbox" value="Surface abstraction" {{ checked("irrigation-target", "Surface abstraction") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-3">
+                  Summer water surface abstraction
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="Rain water" {{ checked("irrigation-target", "Rain water") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-4">
+                  Rain water harvesting
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-target-5" name="irrigation-target" type="checkbox" value="mains" {{ checked("irrigation-target", "mains") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-5">
                   Mains
                 </label>
               </div>
